--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,22 @@ body,
   height: 100%;
 }
 
+/* // add the code bellow */
+@layer utilities {
 
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
 
 @layer base {
   :root {
